--- a/5.3.html
+++ b/5.3.html
@@ -58,11 +58,8 @@
     var stim_high_s0_prac = { timeline: [fix, prac_highPU_s1] };
     var stim_low_s1_prac = { timeline: [fix, prac_lowPU_s1] };
     var stim_low_s0_prac = { timeline: [fix, prac_lowPU_s0] };
-    var prac_highPU = {
-        timeline: [stim_high_s1_prac, stim_high_s0_prac], repetitions: 50, randomize_order: true
-    };
-    var prac_lowPU = {
-        timeline: [stim_low_s1_prac, stim_low_s0_prac], repetitions: 50, randomize_order: true
+    var practice_block = {
+        timeline: [stim_high_s1_prac, stim_high_s0_prac, stim_low_s0_prac, stim_low_s1_prac], repetitions: 5, randomize_order: true
     };
     var prac_block = {
         type: "html-keyboard-response", stimulus: "<p style=\"font-size: 20px;color: #000000\"> Practice Block will begin now. Press any key to start the practice block.</p>",
@@ -436,10 +433,10 @@
     timeline.push(welcome);
     timeline.push(highprac_instruct);
     timeline.push(prac_block);
-    timeline.push(prac_highPU);
+    timeline.push(practice_block);
     timeline.push(lowprac_instruct);
     timeline.push(prac_block);
-    timeline.push(prac_lowPU);
+    timeline.push(practice_block);
     //hh
     timeline.push(instructions);
     timeline.push(block1);
